Fix some of the merge errors